Add AirportRepository, enhance Flight and User models, and implement ReservationLockService